--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Salesmania
-version: 1.0b6
+version: 1.0b7
 description: Plugin for handling player auctions.
 author: Justin
 authors: [Khaos_Fury]
@@ -10,10 +10,8 @@ depend: [Vault]
 commands:
   auction:
     description: Salesmania auction
-    permission: salesmania.auction
   salesmania:
     description: Salesmania
-    permission: salesmania.admin
     
 permissions:
   salesmania.*:
@@ -26,17 +24,37 @@ permissions:
     description: Access to all salesmania auction commands
     default: op
     children:
-      salesmania.auction: true
       salesmania.auction.start: true
       salesmania.auction.bid: true
   salesmania.admin.*:
-    description: Provides access salesmania admin commands
+    description: Access to all salesmania commands
     default: op
     children:
-      salesmania.admin: true
       salesmania.admin.reload: true
       salesmania.auction.cancel: true
       salesmania.auction.end: true
       salesmania.auction.enable: true
       salesmania.auction.disable: true
+  salesmania.auction.start:
+    description: Allows you to start an auction.
+    default: op
+  salesmania.auction.bid:
+    description: Allows you to bid on an auction.
+    default: op
+  salesmania.auction.cancel:
+    description: Allows you to cancel ANY auction.
+    default: op
+  salesmania.auction.end:
+    description: Allows you to end ANY auction.
+    default: op
+  salesmania.auction.enable:
+    description: Allows you to enable the auction.
+    default: op
+  salesmania.auction.disable:
+    description: Allows you to disable the auction.
+    default: op
+  salesmania.admin.reload:
+    description: Allows you to reload salesmania configuration
+    default: op
+  
   
