--- a/resources/config.yml
+++ b/resources/config.yml
@@ -12,11 +12,12 @@ Auction:
   maxStart: 100000
   
   taxAccount: None
+  useTaxAccount: false
   startTax: 0
   endTax: 0
-  taxIsPercent: false
+  startTaxIsPercent: false
+  endTaxIsPercent: false
   taxIfNoBids: true
-  useTaxAccount: false
   
   notifyTime:
   - 30
