--- a/resources/english.yml
+++ b/resources/english.yml
@@ -81,8 +81,8 @@ Auction:
   endInfo:
   - "&aAuction Ended: %quantity% %item% sold for &2$%bid%"
   
-  tax: "&cThere was a $%,.2d fee for this auction."
-  cantAffordTax: "&cYou can't afford the fee of $%,.2d for this auction."
+  tax: "&cThere was a $%,.2f fee for this auction."
+  cantAffordTax: "&cYou can't afford the fee of $%,.2f for this auction."
   
   Bidding:
     bidSuccess: "&aYou've bid &2$%,.2f&a on %s"
