Minor change to french locale

--- a/resources/french.yml
+++ b/resources/french.yml
@@ -39,7 +39,7 @@ Syntax:
 Stash:
   itemsWaiting: "&cVous avez des articles en attente dans votre cachette. Tapez /collect pour les collecter."
   noItems: "&cIl n'y a aucun article dans votre cachette."
-  inventoryFull: "&cIl ya plus d'articles dans votre cachette, faire de la place des stocks et l'utilisation /collect à nouveau."
+  inventoryFull: "&cIl ya plus d'articles dans votre cachette, faire de la place des stocks et utilisez /collect à nouveau."
   gotItems: "&2Vous avez rassemblé tous vos articles."
     
 Auction:
