--- a/resources/english.yml
+++ b/resources/english.yml
@@ -58,6 +58,8 @@ Auction:
   notEnough: "&cYou don't have enough of that item."
   itemBlacklisted: "&cYou can't auction %s"
   noCreative: "&cYou can't use the auction in creative mode."
+  queueFull: "&cThe auction queue is full, you cannot start an auction at this time."
+  playerQueueFull: "&cYou can't auction another item at this time."
   
   enabled: "&aThe auction has been enabled."
   disabled: "&cThe auction has been disabled."
