--- a/resources/english.yml
+++ b/resources/english.yml
@@ -60,6 +60,7 @@ Auction:
   noCreative: "&cYou can't use the auction in creative mode."
   queueFull: "&cThe auction queue is full, you cannot start an auction at this time."
   playerQueueFull: "&cYou can't auction another item at this time."
+  queued: "&aYour auction has been added to the queue."
   
   enabled: "&aThe auction has been enabled."
   disabled: "&cThe auction has been disabled."
