--- a/resources/french.yml
+++ b/resources/french.yml
@@ -59,8 +59,9 @@ Auction:
   notEnough: "&cVous n'avez pas assez de ce poste."
   itemBlacklisted: "&cVous ne pouvez pas d'enchères cet article."
   noCreative: "&cVous ne pouvez pas utiliser d'enchères dans le mode créative."
-  queueFull: ""
-  playerQueueFull: ""
+  queueFull: "&cThe auction queue is full, you cannot start an auction at this time."
+  playerQueueFull: "&cYou can't auction another item at this time."
+  queued: "&aYour auction has been added to the queue."
   
   enabled: "&ala vente aux enchères a été activé."
   disabled: "&cLa vente aux enchères a été désactivé."
