--- a/resources/config.yml
+++ b/resources/config.yml
@@ -4,7 +4,7 @@ Main:
   - english
   - french
   - portuguese
-  
+
 Auction:
   enabled: true
   allowCreative: false
@@ -32,10 +32,9 @@ Auction:
   WorldGroups:
     enabled: false
     groups:
-    - group: default
+    - groupName: default
         enabled: true
         worlds: [world, world_the_end, world_nether]
-        channels: [BROADCAST]
 
   
   Blacklist:
