Adapted AuctionCancel to use world groups.
Also added an appropriate message when attempting to cancel
an auction from the console.

--- a/resources/english.yml
+++ b/resources/english.yml
@@ -106,6 +106,7 @@ Auction:
   Console:
     cantStartAuction: "Sorry, only players can start an auction."
     cantBid: "Sorry, only players can bid on items."
+    cantCancel: "Sorry, only players can cancel an auction."
     
 Enchantment:
   ARROW_DAMAGE: "Power"
