--- a/resources/portuguese.yml
+++ b/resources/portuguese.yml
@@ -106,6 +106,7 @@ Auction:
   Console:
     cantStartAuction: "Desculpe, apenas jogadores podem começar leilões."
     cantBid: "Desculpe, apenas jogadores podem licitar por objetos."
+    cantCancel: "Sorry, only players can cancel an auction."
     
 Enchantment:
   ARROW_DAMAGE: "Power"
