--- a/resources/french.yml
+++ b/resources/french.yml
@@ -108,6 +108,7 @@ Auction:
     cantStartAuction: "Désolé, seuls les joueurs peuvent commencer à une vente aux enchères."
     cantBid: "Désolé, seuls les joueurs peuvent enchérir sur des articles."
     cantCancel: "Sorry, only players can cancel an auction."
+    cantConsole: "Sorry, you can't do that from the console."
     
 Enchantment:
   ARROW_DAMAGE: "Puissance"
