Lots of minor bugfixes

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Salesmania
-version: 1.2.5 beta
+version: 1.2.9-dev
 description: Plugin for handling player auctions.
 author: Justin
 authors: [Khaos_Fury]
