--- a/resources/config.yml
+++ b/resources/config.yml
@@ -34,7 +34,7 @@ Auction:
     - groupName: default
       enabled: true
       worlds: [world, world_the_end, world_nether]
-
+      channels: []
   
   Blacklist:
   - Bedrock
