Added soft depend for TownyChat and Herochat

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -6,6 +6,7 @@ authors: [Khaos_Fury]
 website: http://invisioncraft.net
 main: net.invisioncraft.plugins.salesmania.Salesmania
 depend: [Vault]
+softdepend: [TownyChat, Herochat]
 
 commands:
   auction:
