Added minTime and maxTime to configuration
Not sure how I overlooked this...

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -46,6 +46,8 @@ Auction:
     minIncrement: 100
     maxIncrement: 10000
     defaultTime: 60
+    minTime: 30
+    maxTime: 120
     snipeTime: 10
     snipeValue: 10
     
