--- a/resources/french.yml
+++ b/resources/french.yml
@@ -64,6 +64,8 @@ Auction:
   queued: "&aVotre enchere a ete ajoute a la file d'attente."
   cooldown: "&cVente aux enchères est dans une période de refroidissement qui."
   worldDisabled: "&cAuctions are disabled for this world."
+  regionDisabled: "&cThat command is disabled here."
+  regionStashed: "&cYou aren't allowed to collect auction items here, they've been added to your stash."
   
   enabled: "&ala vente aux enchères a été activé."
   disabled: "&cLa vente aux enchères a été désactivé."
