--- a/resources/portuguese.yml
+++ b/resources/portuguese.yml
@@ -63,6 +63,8 @@ Auction:
   queued: "&aYour auction has been added to the queue."
   cooldown: "&cO leilão está em cooldown."
   worldDisabled: "&cAuctions are disabled for this world."
+  regionDisabled: "&cThat command is disabled here."
+  regionStashed: "&cYou aren't allowed to collect auction items here, they've been added to your stash."
   
   enabled: "&aOs leilões foram activados."
   disabled: "&cOs leilões foram desactivados."
