Added softdepend for WorldGuard

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -6,7 +6,7 @@ authors: [Khaos_Fury]
 website: http://invisioncraft.net
 main: net.invisioncraft.plugins.salesmania.Salesmania
 depend: [Vault]
-softdepend: [TownyChat, Herochat, Multiverse-Core]
+softdepend: [TownyChat, Herochat, Multiverse-Core, WorldGuard]
 
 commands:
   auction:
