Changed regionStashed locale message slightly

--- a/resources/english.yml
+++ b/resources/english.yml
@@ -64,7 +64,7 @@ Auction:
   cooldown: "&aYour auction will begin shortly."
   worldDisabled: "&cAuctions are disabled for this world."
   regionDisabled: "&cThat command is disabled here."
-  regionStashed: "&cYou aren't allowed to collect auction items here, they've been added to your stash."
+  regionStashed: "&cYou aren't allowed to receive auction items here, they've been added to your stash."
   
   enabled: "&aThe auction has been enabled."
   disabled: "&cThe auction has been disabled."
